// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadList should render with ltr bengali items with correct dir 1`] = `
.c1 {
  position: relative;
}

.c8 {
  font-size: 1.625rem;
  line-height: 1.875rem;
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c6 {
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  float: left;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    display: inline-block;
    width: 20%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 3rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: 3rem;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: 3rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-right: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ১
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ২
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ৩
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ৪
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c10"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ৫
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ৬
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ৭
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ৮
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ৯
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ১০
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr burmese items with correct dir 1`] = `
.c1 {
  position: relative;
}

.c8 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c6 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  float: left;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    display: inline-block;
    width: 20%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.75rem;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-right: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 4.125rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 5.375rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၁
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၂
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၃
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၄
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c10"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၅
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၆
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၇
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၈
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၉
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            ၁၀
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr news items with correct dir 1`] = `
.c1 {
  position: relative;
}

.c8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c6 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  float: left;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    display: inline-block;
    width: 20%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-right: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            1
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            2
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            3
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            4
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c10"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            5
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            6
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            7
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            8
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            9
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
            dir="ltr"
          >
            10
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with rtl arabic items with correct dir 1`] = `
.c1 {
  position: relative;
}

.c8 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c6 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  float: right;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    display: inline-block;
    width: 20%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c10 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c10 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-left: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="rtl"
  >
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۱
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۲
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۳
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۴
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c10"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۵
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۶
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۷
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۸
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۹
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="rtl"
        >
          <span
            class="c6"
            dir="rtl"
          >
            ۱۰
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;
